Fix strong not showing as bold on some browsers

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     color: #454545;
 }
 
+strong {
+    font-weight: bold;
+}
+
 h1,
 h2,
 h3 {
